--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Ana Luiza</title>
@@ -9,13 +9,16 @@
     <header>
         <nav class="menu">
           <ul>
+           <li><a href="#">Home</a></li>
            <li><a href="#">Sobre</a></li>
-           <li><a href="#">Portifólio</a></li>
            <li><a href="#">Contato</a></li>
          </ul>
        </nav>
        <h1 class="site-title"> Ana Luiza Macêdo</h1>
        <h2 class="site-subtitle"> IS Undergraduate student</h2>
-    </header>      
+    </header>    
+    <p> Graduanda na  Universidade Federal de Minas Gerais (2020.1 - )</p> 
+    <p2> Trainee na UFMG Informática Júnior (2020.1 - )</p2> 
+    
 </body>
 </html>
