--- a/index.html
+++ b/index.html
@@ -1,53 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Ana Luiza</title>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title>Ana Luiza</title>
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="detalhe.html">
 </head>
+
 <body>
-       <header>
-         <nav class="menu">
-          <ul>
-           <li><a href="#">Home</a></li>
-           <li><a href="#">Portifólio</a></li>
-           <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title"> Ana Luiza Macêdo</h1>
-        <h2 class="site-subtitle"> IS Undergraduate student</h2>
-    </header>   
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Portifólio</a></li>
+        <li><a href="#">Contato<link rel="https://analuizamacedos.github.io/first-website-contato/"></a></li>
+      </ul>
+    </nav>
+    <h1 class="site-title"> Ana Luiza Macêdo</h1>
+    <h2 class="site-subtitle"> IS Undergraduate student</h2>
+  </header>
+  <main>
     <div>
 
-     <div id="div_esquerda">
-       <p> Graduanda na  Universidade Federal de Minas Gerais (2020.1 - )</p> 
-       <p> Trainee na UFMG Informática Júnior (2020.1 - )</p> 
-     </div>
-     <div id="div_direita">
-       <nav class="sobre"> <h3> SOBRE MIM </h3></nav>
-        
-         <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de ser uma pesquisadora,mas não sabia do quê, então ao longo da minha adolescência almejei várias carreiras da área de humanas,de  exatas e de biológicas. E, por fim, decidi que gostaria de seguir uma profissão em um ramo que me desse possibilidade para transitar entre os vários saberes com flexibilidade, e certamente o mundo da computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias formas, em busca de algo que eu possa ser útil, além de contribuir para a sociedade. </p>  
+      <div id="div_esquerda">
+        <p> Graduanda na Universidade Federal de Minas Gerais (2020.1 - )</p>
+        <p> Trainee na UFMG Informática Júnior (2020.1 - )</p>
+        <img scr="C:\Users\Ana Luiza\Pictures\eu-feira.jpg" height="100" alt="foto de ana luiza">
+      </div>
+      <div id="div_direita">
+        <nav class="sobre">
+          <h3> SOBRE MIM </h3>
+        </nav>
+
+        <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de ser
+          uma pesquisadora,mas não sabia do quê, então ao longo da minha adolescência almejei várias carreiras da área
+          de humanas,de exatas e de biológicas. E, por fim, decidi que gostaria de seguir uma profissão em um ramo que
+          me desse possibilidade para transitar entre os vários saberes com flexibilidade, e certamente o mundo da
+          computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias formas,
+          em busca de algo que eu possa ser útil, além de contribuir para a sociedade. </p>
       </div>
 
     </div>
+  </main>
+  <footer>
+    <nav class="footer">
+      <ul>
+        <li><a href="https://github.com/analuizamacedos"> GitHub
+          </a> </li>
+        <li><a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/">Linkedin
+          </a></li>
+      </ul>
+    </nav>
+  </footer>
 
-    <footer>
-      <nav class="footer">
-        <ul>
-               <li><a href="https://github.com/analuizamacedos"> GitHub
-               </a> </li>
-               <li><a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/">Linkedin
-               </a></li>
-       </ul>
-     </nav>
-   </footer> 
-   
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-</body> 
-    
 </body>
+
+
 </html>
