--- a/index.html
+++ b/index.html
@@ -4,55 +4,63 @@
 <head>
   <meta charset="UTF-8">
   <title>Ana Luiza</title>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <link rel="stylesheet" href="detalhe.html">
 </head>
 
 <body>
   <header>
     <nav class="menu">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Portifólio</a></li>
-        <li><a href="#">Contato<link rel="https://analuizamacedos.github.io/first-website-contato/"></a></li>
+        <li><a><img scr="https://icon-icons.com/icons2/561/PNG/32/website-design-symbol_icon-icons.com_53822.png"
+              alt=ícone></a></li>
+        <li>
+          <nav class="titulo">
+            <h1>Ana Luiza Macêdo</h1>
+          </nav>
+
+        </li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contato.html">Contato</a></li>
+
       </ul>
     </nav>
-    <h1 class="site-title"> Ana Luiza Macêdo</h1>
-    <h2 class="site-subtitle"> IS Undergraduate student</h2>
+    <div>
+      <h1 class="site-title"> Bem-vindo</h1>
+      <h2 class="site-subtitle">esta é a minha página pessoal</h2>
+    </div>
   </header>
   <main>
-    <div>
-
-      <div id="div_esquerda">
+    <div class="main">
+      <div class="div1">
+        <nav class="Formação">
+          <h3> Formação<h3>
+        </nav>
         <p> Graduanda na Universidade Federal de Minas Gerais (2020.1 - )</p>
         <p> Trainee na UFMG Informática Júnior (2020.1 - )</p>
-        <img scr="C:\Users\Ana Luiza\Pictures\eu-feira.jpg" height="100" alt="foto de ana luiza">
-      </div>
-      <div id="div_direita">
-        <nav class="sobre">
-          <h3> SOBRE MIM </h3>
-        </nav>
 
-        <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de ser
+      </div>
+      <hr />
+      <div class="div2">
+        <nav class="sobre">
+          <h4>Sobre mim</h4>
+        </nav>
+        <figure>
+          <img class="img-perfil" src="img/foto-feira.jpg" alt="foto de ana luiza">
+        </figure>
+
+        <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de
+          ser
           uma pesquisadora,mas não sabia do quê, então ao longo da minha adolescência almejei várias carreiras da área
           de humanas,de exatas e de biológicas. E, por fim, decidi que gostaria de seguir uma profissão em um ramo que
           me desse possibilidade para transitar entre os vários saberes com flexibilidade, e certamente o mundo da
-          computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias formas,
+          computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias
+          formas,
           em busca de algo que eu possa ser útil, além de contribuir para a sociedade. </p>
-      </div>
 
+      </div>
     </div>
   </main>
-  <footer>
-    <nav class="footer">
-      <ul>
-        <li><a href="https://github.com/analuizamacedos"> GitHub
-          </a> </li>
-        <li><a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/">Linkedin
-          </a></li>
-      </ul>
-    </nav>
-  </footer>
 
 </body>
 
