--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ana Luiza</title>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -11,13 +12,11 @@
   <header>
     <nav class="menu">
       <ul>
-        <li><a><img scr="https://icon-icons.com/icons2/561/PNG/32/website-design-symbol_icon-icons.com_53822.png"
-              alt=ícone></a></li>
-        <li>
-          <h1>Ana Luiza Macêdo</h1>
-        </li>
         <li><a href="index.html">Home</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
         <li><a href="contato.html">Contato</a></li>
+
+
       </ul>
     </nav>
     <main>
@@ -25,32 +24,30 @@
       <p>Certamente uma das coisas que mais me impulsiona é conhecer pessoas com diferentes perfis acadêmicos, sociais,
         profissionais e culturais ,portanto, se gostaria de entrar em contato preencha abaixo! </p>
       <form>
-        <p>
-          <label for="a">Nome:</label>
-          <input type="text" name="a">
-        </p>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Mensagem:</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button>Enviar</button>
+      </form>
 
-        <p>
-          <label for="b">Mensagem:</label>
-          <textarea name="b"></textarea>
-        </p>
-
-        <p>
-          <label for="c">Email:</label>
-          <textarea name="b"></textarea>
-
-          <button>enviar</button>
-
-        <footer>
-          <nav class="footer">
-            <ul>
-              <li><a href="https://github.com/analuizamacedos"> GitHub
-                </a> </li>
-              <li><a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/">Linkedin
-                </a></li>
-            </ul>
-          </nav>
-        </footer>
+      <footer>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body"></div>
+            <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
+          </div>
+        </div>
+      
+      </footer>
       </form>
 
 
