--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
   <header>
     <nav class="menu">
       <ul>
-        <li><a><img scr="https://icon-icons.com/icons2/561/PNG/32/website-design-symbol_icon-icons.com_53822.png"
-              alt=ícone></a></li>
-        <li>
-          <nav class="titulo">
-            <h1>Ana Luiza Macêdo</h1>
-          </nav>
-
-        </li>
         <li><a href="index.html">Home</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
         <li><a href="contato.html">Contato</a></li>
+
 
       </ul>
     </nav>
@@ -31,36 +25,17 @@
     </div>
   </header>
   <main>
-    <div class="main">
-      <div class="div1">
-        <nav class="Formação">
-          <h3> Formação<h3>
-        </nav>
-        <p> Graduanda na Universidade Federal de Minas Gerais (2020.1 - )</p>
-        <p> Trainee na UFMG Informática Júnior (2020.1 - )</p>
+    <p>
+    <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
+    <h2 class="profession">Estudante de Sistemas de Informação</h2>
+    </p>
 
-      </div>
-      <hr />
-      <div class="div2">
-        <nav class="sobre">
-          <h4>Sobre mim</h4>
-        </nav>
-        <figure>
-          <img class="img-perfil" src="img/foto-feira.jpg" alt="foto de ana luiza">
-        </figure>
-
-        <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de
-          ser
-          uma pesquisadora,mas não sabia do quê, então ao longo da minha adolescência almejei várias carreiras da área
-          de humanas,de exatas e de biológicas. E, por fim, decidi que gostaria de seguir uma profissão em um ramo que
-          me desse possibilidade para transitar entre os vários saberes com flexibilidade, e certamente o mundo da
-          computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias
-          formas,
-          em busca de algo que eu possa ser útil, além de contribuir para a sociedade. </p>
-
-      </div>
-    </div>
   </main>
+  <footer>
+    <p>
+      ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
+      </p>
+  </footer>
 
 </body>
 
