--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
     </div>
   </header>
   <main>
+    <div class="principal">
     <p>
     <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
     <h2 class="profession">Estudante de Sistemas de Informação</h2>
     </p>
+    </div>
 
   </main>
   <footer>
-    <p>
+    <div class="footer">
+    
       ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
-      </p>
+    </div>
   </footer>
 
 </body>
