--- a/contato.html
+++ b/contato.html
@@ -19,10 +19,12 @@
 
       </ul>
     </nav>
-    <main>
-      <h1>Contato</h1>
-      <p>Certamente uma das coisas que mais me impulsiona é conhecer pessoas com diferentes perfis acadêmicos, sociais,
-        profissionais e culturais ,portanto, se gostaria de entrar em contato preencha abaixo! </p>
+  </header>
+  <main>
+    <h1>Contato</h1>
+    <p>Certamente uma das coisas que mais me impulsiona é conhecer pessoas com diferentes perfis acadêmicos, sociais,
+      profissionais e culturais ,portanto, se gostaria de entrar em contato preencha abaixo! </p>
+    <div class="form">
       <form>
         <div class="form-group">
           <label for="exampleFormControlInput1">Email</label>
@@ -34,21 +36,21 @@
         </div>
         <button>Enviar</button>
       </form>
-
-      <footer>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
-          </div>
+    </div>
+    <footer>
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
         </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body"></div>
-            <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
-          </div>
-        </div>
-      
-      </footer>
-      </form>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <div class="card-body"></div>
+        <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
+      </div>
+      </div>
+
+    </footer>
+    </form>
 
 
 
@@ -59,7 +61,7 @@
 
 
 
-    </main>
+  </main>
 
 </body>
 
