--- a/contato.html
+++ b/contato.html
@@ -34,21 +34,22 @@
           <label for="exampleFormControlTextarea1">Mensagem:</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <button>Enviar</button>
+        <button class="button">Enviar </button>
       </form>
     </div>
-    <footer>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+ <div class="footer">
+      <footer>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body"></div>
-        <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
-      </div>
-      </div>
-
+        <div class="card" style="width: 18rem;">
+          <div class="card-body"></div>
+          <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
+        </div>
+    </div>
+  </div>
     </footer>
     </form>
 
