--- a/contato.html
+++ b/contato.html
@@ -35,21 +35,24 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <button class="button">Enviar </button>
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <div class="card-body"></div>
+              <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">Linkedin</a>
+            </div>
+        </div>
       </form>
     </div>
  <div class="footer">
       <footer>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
-          </div>
+        <div class="footer">
+    
+          ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
         </div>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body"></div>
-          <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">linkedin</a>
-        </div>
-    </div>
-  </div>
     </footer>
     </form>
 
