--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 
       </ul>
     </nav>
-    <div>
+    <div="intro">
       <h1 class="site-title"> Bem-vindo</h1>
       <h2 class="site-subtitle">esta é a minha página pessoal</h2>
     </div>
   </header>
   <main>
     <div class="principal">
-    <p>
-    <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
-    <h2 class="profession">Estudante de Sistemas de Informação</h2>
-    </p>
+      <p>
+      <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
+      <h2 class="profession">Estudante de Sistemas de Informação</h2>
+      </p>
     </div>
-
   </main>
+
   <footer>
     <div class="footer">
-    
+
       ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
     </div>
   </footer>
