--- a/sobre.html
+++ b/sobre.html
@@ -43,6 +43,12 @@
       </nav>
     </div>
   </main>
+  <footer>
+    <div class="footer">
+    
+      ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
+    </div>
+  </footer>
 
 </body>
 
