--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
       </ul>
     </nav>
-    <div="intro">
+    <div class ="intro">
       <h1 class="site-title"> Bem-vindo</h1>
+      <p>
       <h2 class="site-subtitle">esta é a minha página pessoal</h2>
+    </p>
     </div>
   </header>
   <main>
     <div class="principal">
-      <p>
       <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
       <h2 class="profession">Estudante de Sistemas de Informação</h2>
-      </p>
     </div>
   </main>
 
