--- a/sobre.html
+++ b/sobre.html
@@ -22,25 +22,19 @@
   </header>
   <main>
     <div class="text">
-      <h1>Sobre Mim </h1>
+      <h1 class="about">Sobre Mim </h1>
       <figure>
         <img class="img-perfil" src="img/foto-feira.jpg" alt="foto de ana luiza">
       </figure>
 
-      <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E logo na infância tive o sonho de
-        ser
-        uma pesquisadora,mas não sabia do quê, então ao longo da minha adolescência almejei várias carreiras da área
-        de humanas,de exatas e de biológicas. E, por fim, decidi que gostaria de seguir uma profissão em um ramo que
-        me desse possibilidade para transitar entre os vários saberes com flexibilidade, e certamente o mundo da
-        computação e da tecnologia permite isso. Em síntese, estou aqui para aprender e me apaixonar de várias
-        formas,
-        em busca de algo que eu possa ser útil, além de contribuir para a sociedade. </p>
-      <nav class="Formação">
-        <h3> Formação<h3>
+      <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E, atualmente estou desenvolvendo habilidades na área de tecnologia e participando do Programa Trainee da Informático Júnior UFMG, em que aprenderei especificidades de front end e de back end, além de ter a chance de conhecer a dinâmica de uma empresa e suas complexidades. Também me interesso pela parte matemática do meu curso e pretendo contribuir com pesquisas acadêmicas ao longo de minha graduação, de modo que eu tenha a possibilidade de crescer no mercado de trabalho e fazer produção científica. 
+      </p>
+      <nav class="formacao">
+        <h3 class="Formacao"> Formação<h3>
       </nav>
-      <p> Graduanda na Universidade Federal de Minas Gerais (2020.1 - )</p>
-      <p> Trainee na UFMG Informática Júnior (2020.1 - )</p>
+       
       <nav class="sobre">
+      <p> Graduação: Universidade Federal de Minas Gerais (2020.1 - )</p>
       </nav>
     </div>
   </main>
