--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,8 @@
   <title>Ana Luiza</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -22,9 +23,10 @@
     </nav>
   </header>
   <main>
-    <h1>Contato</h1>
-    <p>Certamente uma das coisas que mais me impulsiona é conhecer pessoas com diferentes perfis acadêmicos, sociais,
-      profissionais e culturais ,portanto, se gostaria de entrar em contato preencha abaixo! </p>
+    <h1 class="contato">Contato</h1>
+    <div class="contato-text">
+      <p> Para entrar em contato, preencha abaixo ou entre nas minhas redes sociais. </p>
+    </div>
     <div class="form">
       <form>
         <div class="form-group">
@@ -36,31 +38,37 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <button class="button">Enviar </button>
-            <div class="card" style="width: 18rem;">
-              <div class="card-body">
-                <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <div class="card-body"></div>
-              <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">Linkedin</a>
-            </div>
+        <div class="card" style="width:auto;">
+          <div class="card-body">
+            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+          </div>
         </div>
-      </form>
+        <div class="card" style="width:auto;">
+          <div class="card-body"></div>
+          <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">Linkedin</a>
+        </div>
+    </div>
+    </form>
     </div>
   </main>
- 
-    <div class="footer">
-      <footer>
-        <div class="footer">
-    
-          ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
-        </div>
+
+  <div class="footer">
+    <footer>
+      <div class="footer">
+
+        ©2020 Ana Luiza Macêdo dos Santos. Todos os direitos reservados.
+      </div>
     </footer>
     </form>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
 
 </body>
 
