--- a/sobre.html
+++ b/sobre.html
@@ -27,11 +27,12 @@
       <figure>
         <img class="img-perfil" src="img/foto-feira.jpg" alt="foto de ana luiza">
       </figure>
-
-      <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação.E, atualmente estou desenvolvendo habilidades na área de tecnologia e participando do Programa Trainee da Informático Júnior UFMG, em que aprenderei especificidades de front end e de back end, além de ter a chance de conhecer a dinâmica de uma empresa e suas complexidades. Também me interesso pela parte matemática do meu curso e pretendo contribuir com pesquisas acadêmicas ao longo de minha graduação, de modo que eu tenha a possibilidade de crescer no mercado de trabalho e fazer produção científica. 
+      <div class="description">
+      <p> Sou Ana Luiza, tenho 20 anos e estou cursando Sistemas de Informação. E, atualmente estou desenvolvendo habilidades na área de tecnologia e participando do Programa Trainee da Informático Júnior UFMG, em que aprenderei especificidades de front end e de back end, além de ter a chance de conhecer a dinâmica de uma empresa e suas complexidades. Também me interesso pela parte matemática do meu curso e pretendo contribuir com pesquisas acadêmicas ao longo de minha graduação, de modo que eu tenha a possibilidade de crescer no mercado de trabalho e fazer produção científica. 
       </p>
+      </div>
       <nav class="formacao">
-        <h3 class="Formacao"> Formação<h3>
+        <h3 class="formacao"> Formação<h3>
       </nav>
        
       <nav class="sobre">
