--- a/contato.html
+++ b/contato.html
@@ -37,17 +37,13 @@
           <label for="exampleFormControlTextarea1">Mensagem:</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <button class="button">Enviar </button>
-        <div class="card" style="width:auto;">
-          <div class="card-body">
-            <a href="https://github.com/analuizamacedos" class="card-link">GitHub</a>
+       <button class="button">Enviar </button>
+        <div>
+         <div class="card">
+         <p><a href="https://github.com/analuizamacedos">GitHub</a></p>
+          <p><a href="https://www.linkedin.com/in/ana-luiza-macêdo/">Linkedin</a></p>
           </div>
-        </div>
-        <div class="card" style="width:auto;">
-          <div class="card-body"></div>
-          <a href="https://www.linkedin.com/in/ana-luiza-mac%C3%AAdo/" class="card-link">Linkedin</a>
-        </div>
-    </div>
+      </div>
     </form>
     </div>
   </main>
