--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -24,13 +25,9 @@
     </nav>
     </div>
   </header>
-  <main>
-    <div class="principal">
-      <div class="intro">
+  <main class="main">
         <h1 class="name"> Ana Luiza Macêdo dos Santos</h1>
         <h2 class="profession">Estudante de Sistemas de Informação</h2>
-      </div>
-    </div>
   </main>
 
   <footer>
